src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__COGS__c</fullName>
        <description>Cost of goods sold</description>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Integration__c</fullName>
        <description>Change to Request Sync to Update in QuickBooks Online</description>
        <inlineHelpText>Change to Request Sync to Update in QuickBooks Online</inlineHelpText>
        <label>Integration</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Sync</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__OnHand__c</fullName>
        <label>OnHand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
        <label>QuickBooks Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>ItemService</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ItemNonInventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemOtherCharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemInventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemInventoryAssembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ItemDiscount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>